--- a/deuquadra/src/main/resources/application.properties
+++ b/deuquadra/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=deuquadra
 
 # datasource PostgreSQL
 spring.datasource.url = jdbc:postgresql://localhost:5432/
-spring.datasource.username=database
-spring.datasource.password=database
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
 # jpa
 spring.jpa.database-plataform=org.hibernate.dialect.PostgreSQLDialect
