--- a/deuquadra/src/main/resources/application.properties
+++ b/deuquadra/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=deuquadra
 # datasource PostgreSQL
 spring.datasource.url = jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=postgres
 
 # jpa
 spring.jpa.database-plataform=org.hibernate.dialect.PostgreSQLDialect
