fixing building problems

--- a/deuquadra/src/main/resources/application.properties
+++ b/deuquadra/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=deuquadra
 
 # datasource PostgreSQL
-spring.datasource.url = jdbc:postgresql://localhost:5432/
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url = jdbc:postgresql://dquadra.ceskjylknpdm.us-east-1.rds.amazonaws.com:5432/postgres?user=dquadra&password=deuquadra2024123
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
 # jpa
 spring.jpa.database-plataform=org.hibernate.dialect.PostgreSQLDialect
